# sweeping-algorithms

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
benches/: .gitignore  basics.rs  bench_avg.py  bench_cmp.py  big_logic.metta.paths  binary_keys.rs  cities.rs  divan_fmt.py  oeis.rs  parallel.rs  path_ops.rs  pointcloud.rs  serde.rs  shakespeare.rs  sparse_keys.rs  superdense_keys.rs
examples/arena_compact_tests/: Cargo.toml  out.txt
examples/arena_compact_tests/src/: main.rs  symbol_dump.rs
examples/octtree/: Cargo.toml
examples/octtree/src/: main.rs
examples/random-walk-catmorphism/: Cargo.toml
examples/random-walk-catmorphism/src/: main.rs
examples/random_walk/: Cargo.toml
examples/random_walk/src/: main.rs
examples/sampling/: Cargo.toml
examples/sampling/src/: main.rs
examples/uniform-catamorphism/: Cargo.toml
examples/uniform-catamorphism/src/: main.rs
examples/weighted-random-walk-hashmap/: Cargo.toml
examples/weighted-random-walk-hashmap/src/: main.rs
notes/: allocator_example.txt  byterie_allocator.txt
pathmap-book/: book.toml
pathmap-book/src/: 00.00_intro.md  01.01_algebraic_traits.md  02.01_zipper_iter.md  02.02_multi_zipper.md  1.01.00_algebraic_ops.md  1.02.00_zippers.md  1.02.02_multi_zipper.md  1.03.00_morphisms.md  2.00.00_database_intro.md  2.00.00_encoding_overview.md  2.00.01_concurrency.md  2.01.03_point_encoding.md  2.01.04_symbol_encoding.md  2.01.05_fuzzy_search_encoding.md  2.02.00_primitive_representations.md  2.02.01_integer_encoding.md  2.02.02_float_encoding.md  A.0001_map_root_values.md  A.0002_smart_ptr_upgrade.md  A.0003_policy_API.md  SUMMARY.md
src/: arena_compact.rs  bittrie.rs  bittrie_alloc.rs  bridge_node.rs  bytetrie.rs  bytize.rs  counters.rs  dag_serialization.rs  dense_byte_node.rs  empty_node.rs  experimental.rs  fuzzer.rs  lib.rs  line_list_node.rs  main.rs  morphisms.rs  old_cursor.rs  old_dense_cursor.rs  path_serialization.rs  product_zipper.rs  ring.rs  serialization.rs  tiny_node.rs  tree_serialization.rs  trie_map.rs  trie_node.rs  trie_ref.rs  utils.rs  viz.rs  write_zipper.rs  zipper.rs  zipper_head.rs  zipper_tracking.rs
src/utils/: ints.rs  mod.rs
