[package]
name = "pathmap"
version = "0.1.0"
edition = "2021"
description = "A key-value store with prefix compression, structural sharing, and powerful algebraic operations"

[dependencies]
dyn-clone = "1.0.17"
local-or-heap = "0.1.0"
reusing-vec = {version = "0.2.0", features = ["smallvec"]}
smallvec = {version = "1.13.2", features = ["union"]}
mutcursor = {version = "0.4"}
num-traits = "0.2"
tikv-jemallocator = {version = "0.6.0", optional = true}

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"] # Enables [jemalloc](https://jemalloc.net/) as the default allocator.  This dramatically improves scaling for write-heavy workloads and is generally recommended.  The only reason it is not the default is to avoid interference with the host application allocator.
racy_refcount = [] # Uses ordinary memory access instead of atomics for refcounts.  This is for establishing perf bounds; but may result in data corruption.  This is a debug-only setting and is only sound in single-threaded applications, but even in single-threaded clients the benefits are negligible.
all_dense_nodes = [] # Exclusively use the DenseByteNode type, which generally performs worse but is useful for compatibility and perf comparisons.
bridge_nodes = [] # Enable the experimental BridgeNode type.  Incompatible with `all_dense_nodes`
counters = [] # Enable features to inspect performance properties of tries.  Mainly useful when tuning performance of the PathMap internals.

[dev-dependencies]
divan = "0.1.14"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"]}
csv = "1.1.6"

[[bench]]
name = "superdense_keys"
harness = false

[[bench]]
name = "sparse_keys"
harness = false

[[bench]]
name = "cities"
harness = false

[[bench]]
name = "shakespeare"
harness = false

[[bench]]
name = "parallel"
harness = false
